--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Add the site description here" />
 <meta  name="keywords" content="First keyword, second keyword," />
 <title>
-New Page
+New page
 </title>
 <link rel="stylesheet"  href="bootstrap.css" type="text/css" media="screen"/>
 <link rel="stylesheet"  href="style.css" type="text/css" media="screen"/>
